--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 }
 </script>
 </head>
-  <body class="bg-gray-900 text-white overflow-hidden">
+  <body class="bg-gray-900 text-white overflow-hidden select-none">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
